Adds issues component ch6

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<router-outlet></router-outlet>
+<header>
+  <h1>Issue Tracker</h1>
+  <a routerLink="">Issues</a>
+  <a routerLink="/issues">Issues</a>
+</header>
+<main>
+  <router-outlet></router-outlet>
+</main>
